  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005/03/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_NetTransportSSL_StartConnect() no returns 
  GWEN_NetTransportResultWantRead instead of GWEN_NetTransportResultOk when
  the connect is in progress.
- same with GWEN_NetTransportSocket_StartConnect()
- GWEN_WaitCallback() now checks all currently entered callbacks


2005/03/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added flag GWEN_DB_FLAGS_LOCKFILE to GWEN_DB. This is used when reading
  or writing a GWEN_DB file. If the flag is given the file is locked
  before opening and unlocked after closing.


2005/03/08: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added flags to GWEN_CRYPTKEY which will be used to influence the behaviour
  of some functions (namely the sign function of RSA keys)
- introduced flag GWEN_CRYPT_FLAG_DISABLE_SMALLER_SIGNATURE which will disable
  selecting the smaller signature when signing data (might help solve a 
  special bug in AqHBCI which has not yet been fixed).

2005-03-07   Christian Stimming <stimming@tuhh.de>

	* src/parser/xml.c (GWEN_XML__ReadWordBuf): Rearrange some checks
	to improve performance. I tried to improve some flags-checks by
	introducing extra variables, but that gave no improvements.

	* src/io/bufferedio.c (GWEN_BufferedIO_ReadChar): Because this
	function is called for every character read, we skip the assert
	check in this function.

	
2005/03/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- partially reverted cs' changes to base/buffer.c: Please dicuss *before*
  making changes to this important class, it is widely used (especially